# -*- coding: utf-8 -*-

[metadata]
author = Etienne Labbé (Labbeti)
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
description = Automated Audio Captioning metrics with Pytorch.
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
name = aac-metrics
project_urls =
    Source = https://github.com/Labbeti/aac-metrics
url = https://github.com/Labbeti/aac-metrics
version = attr: aac_metrics.__version__

[options]
packages=find:
package_dir=
    =src
python_requires = >= 3.9
install_requires = 
    torch>=1.10.1
    numpy>=1.21.2
    pyyaml>=6.0
    tqdm>=4.64.0

[options.extras_require]
dev =
  pytest
  flake8
  black

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    aac-metrics = aac_metrics.__main__:_print_usage
    aac-metrics-download = aac_metrics.download:_main_download
    aac-metrics-evaluate = aac_metrics.evaluate:_main_evaluate
    aac-metrics-info = aac_metrics.info:print_install_info
