# -*- coding: utf-8 -*-

[metadata]
author = Etienne Labbé (Labbeti)
author_email = labbeti.pub@gmail.com
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
description = Metrics for evaluating Automated Audio Captioning systems, designed for PyTorch.
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
name = aac-metrics
project_urls =
    Documentation = https://aac-metrics.readthedocs.io/
    Source = https://github.com/Labbeti/aac-metrics
    PyPI = https://pypi.org/project/aac-metrics/
url = https://github.com/Labbeti/aac-metrics
version = attr: aac_metrics.__version__

[options]
packages=find:
package_dir=
    =src
python_requires = >= 3.9
install_requires = 
    torch>=1.10.1
    numpy>=1.21.2
    pyyaml>=6.0
    tqdm>=4.64.0
    sentence-transformers>=2.2.2

[options.extras_require]
dev=
    pytest==7.1.2
    flake8==4.0.1
    black==22.8.0
    scikit-image==0.19.2
    matplotlib==3.5.2

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    aac-metrics = aac_metrics.__main__:_print_usage
    aac-metrics-download = aac_metrics.download:_main_download
    aac-metrics-evaluate = aac_metrics.evaluate:_main_evaluate
    aac-metrics-info = aac_metrics.info:print_install_info
